[gd_scene load_steps=5 format=2]

[ext_resource path="res://GatewayRequest.gd" type="Script" id=1]
[ext_resource path="res://Output.gd" type="Script" id=2]
[ext_resource path="res://StatusLabel.gd" type="Script" id=3]
[ext_resource path="res://URLBar.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 210.512
margin_top = 29.217
margin_right = 490.512
margin_bottom = 43.217
text = "Enter your `hyper://` URL and press `Load`"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="URLBar" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 68.0
margin_right = 570.0
margin_bottom = 92.0
text = "hyper://blog.mauve.moe/"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="."]
margin_left = 585.838
margin_top = 70.4204
margin_right = 627.838
margin_bottom = 90.4204
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Label" parent="."]
margin_left = 24.0
margin_top = 109.0
margin_right = 639.0
margin_bottom = 623.0
autowrap = true
clip_text = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = 33.2978
margin_top = 636.226
margin_right = 73.2978
margin_bottom = 650.226
text = "Status: Waiting"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HyperLoad" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[connection signal="text_entered" from="URLBar" to="URLBar" method="_on_URLBar_text_entered"]
[connection signal="url" from="URLBar" to="HyperLoad" method="requestHyper"]
[connection signal="pressed" from="LoadButton" to="URLBar" method="navigate"]
[connection signal="failed_load" from="HyperLoad" to="StatusLabel" method="setError"]
[connection signal="loaded_data" from="HyperLoad" to="StatusLabel" method="setLoaded"]
[connection signal="loaded_data" from="HyperLoad" to="Output" method="setContent"]
[connection signal="loading_data" from="HyperLoad" to="StatusLabel" method="setLoadingData"]
[connection signal="request_completed" from="HyperLoad" to="HyperLoad" method="_on_request_completed"]
